syntax = "proto3";
package mpim;

import "common.proto";
option cc_generic_services = true;	// 生成通用服务接口基类

message LoginReq {
	bytes username = 1;
	bytes password = 2;
}

message LoginResp {
	Result result = 1;
	int64 user_id = 2;
	string token = 3;
}

// 新增：注册
message RegisterReq {
	bytes username = 1;
	bytes password = 2;
}

message RegisterResp {
	Result result = 1;
	int64 user_id = 2;
}

// 登出请求
message LogoutReq {
	int64 user_id = 1;
	string token = 2;
}

message LogoutResp {
	Result result = 1;
}

// 好友相关
message AddFriendReq {
	int64 user_id = 1;
	int64 friend_id = 2;
	string message = 3;  // 添加好友时的验证消息
}

message AddFriendResp {
	Result result = 1;
}

message GetFriendsReq {
	int64 user_id = 1;
}

message GetFriendsResp {
	Result result = 1;
	repeated int64 friend_ids = 2;
}

message RemoveFriendReq {
	int64 user_id = 1;
	int64 friend_id = 2;
}

message RemoveFriendResp {
	Result result = 1;
}

service UserService {
	rpc Login(LoginReq) returns (LoginResp);
	rpc Register(RegisterReq) returns (RegisterResp);
	rpc Logout(LogoutReq) returns (LogoutResp);
	rpc AddFriend(AddFriendReq) returns (AddFriendResp);
	rpc GetFriends(GetFriendsReq) returns (GetFriendsResp);
	rpc RemoveFriend(RemoveFriendReq) returns (RemoveFriendResp);
}